# parallel-numpy-rng

./: .gitignore  CHANGES.rst  README.md  parallel_numpy_rng.py  pyproject.toml  requirements.txt  setup.cfg  test_parallel_numpy_rng.py
.github/workflows/: python-publish.yml  test.yml
src/parallel_numpy_rng/: __init__.py  parallel_numpy_rng.py  utils.py
