[metadata]
name = parallel-numpy-rng
author = Lehman Garrison
description = Parallel random number generation that produces the same result, regardless of the number of threads
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lgarrison/parallel-numpy-rng/
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
